force-app/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <description>Stockage des résultats des questionnaires de DA.</description>
    <label>Questionnaire</label>
    <nameField>
        <label>Nom du Questionnaire</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>