force-app/main/default/objects/Questionnaire__c/fields/Bilan__c.field-meta.xml
<CustomField>
    <fullName>Bilan__c</fullName>
    <label>Bilan ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>