force-app/main/default/objects/Questionnaire__c/fields/Macroprofil__c.field-meta.xml
<CustomField>
    <fullName>Macroprofil__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Macroprofil</label>
    <referenceTo>Macroprofil__c</referenceTo>
    <relationshipLabel>Questionnaires</relationshipLabel>
    <relationshipName>Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>