force-app/main/default/objects/Questionnaire__c/fields/Statut_de_la_requete__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_la_requete__c</fullName>
    <label>Statut de la requête</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>En attente demande de sortie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>