force-app/main/default/objects/Questionnaire__c/recordTypes/FR_Demande_de_sortie.recordType-meta.xml
<RecordType>
    <fullName>FR_Demande_de_sortie</fullName>
    <active>true</active>
    <description>Pour créer un questionnaire type Demande de sortie.</description>
    <label>FR_Demande_de_sortie</label>
</RecordType>