force-app/main/default/objects/Questionnaire__c/recordTypes/FR_Questionnaire_1_a_Bilan.recordType-meta.xml
<RecordType>
    <fullName>FR_Questionnaire_1_a_Bilan</fullName>
    <active>true</active>
    <description>Pour créer un questionnaire type Appel 1, 2, 3 ou Bilan.</description>
    <label>FR_Questionnaire_1_a_Bilan</label>
</RecordType>