force-app/main/default/objects/Questionnaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference_externe__c</columns>
    <columns>Macroprofil__c</columns>
    <columns>Operateur__c</columns>
    <columns>Statut_de_la_requete__c</columns>
    <columns>Bilan__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>